--- a/css/global.css
+++ b/css/global.css
@@ -3,73 +3,107 @@
     margin: 0;
 	padding: 0;
 }
+
 a {
 	text-decoration: none;
 }
+
 html {
 	font: 20px/1.618 Garamond, Cambria, sans-serif;
 }
-a:link {
-	color: rgb(224, 222, 220); 
-	background-color: transparent; 
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+	padding: 0;
+}
+
+a {
+	color: inherit;
+  	font-weight: bold;
 	text-decoration: none;
 }
-a:visited {
-	color: rgb(224, 222, 220);
-	background-color: transparent;
-	text-decoration: none;
-}
-a:hover {
-	color:rgb(233, 97, 73);
-	background-color: transparent;
-	text-decoration: underline;
+
+html {
+  	--primary-red: rgb(233, 114, 93);
+	--secondary-white: rgb(224, 222, 220);
+	--tertiary-gray: rgb(116, 110, 110);
+  	font: 20px/1.618 Garamond, Cambria, sans-serif;
 }
 
 .main-header {
-	border: 2px solid black;	
-	position: center;
-	background-color:rgb(233, 114, 93);		
-}
-.top-header {
-	color:  rgb(224, 222, 220);
-	text-align: center;
-	font-size: 80px;
-	padding-right: 50px;
-	padding-left: 70px;
-	padding-bottom: 10px;
-	padding-top: 10px;
-}
-.intro-statement {
-	font-size: 30px;
-	text-align: center;
-	padding-bottom: 10px;
-}
-.nav-tools {
-    
-    font-weight: bold;
-	border-bottom: 1px solid black;
-	background-color:rgb(116, 110, 110);
-	text-align: center;
+  	align-items: center;
+ 	background-color: rgb(233, 114, 93);
+	color: var(--secondary-white);
+ 	display: flex;
+ 	justify-content: space-between;
+ 	padding: .5rem;
+ 	padding-left: 3rem;
+	font-size: 30px; 
+	-webkit-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	-moz-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	text-shadow:0px 5px 10px #c3b2b2;
 }
 
-li {
+.nav__button {
+	background-color: var(--secondary-white);
+	border: none;
+	border-radius: .35rem;
+	color: var(--tertiary-gray);
+	font-size: 1rem;
+	font-weight: bold;
+	padding: 0.5rem 1rem;
+	width: 6rem;
+	text-shadow:0px 5px 10px #c3b2b2;
+}
+  
+.nav__list {
+	background-color: var(--primary-red);
+	border-radius: 0 0 0.5rem 0.5rem;
+	list-style: none;
+	padding: 1rem 2rem;
+	position: absolute;
+	right: 0;
+	font-size: 1rem;
+	-webkit-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	-moz-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+}
+  
+.nav {
+	position: relative;
+}
+
+.nav__item {
+	margin-bottom: 0.5rem;
+}
+
+.nav__item:last-child {
+	margin-bottom: 0;
+}
+
+.hide {
+	display: none;
+}
+
+.pro-statement{
+	margin: 1.5rem;
+	text-align: center;
+	color: var(--tertiary-gray);
+	padding-top: 20px;
+	text-shadow:0px 5px 10px #b2aaa5;
+}
+
+.footer-container {
+	position: fixed;
+  	left: 0;
+  	bottom: 0;
+	width: 100%;
+	font-size: 15px;
 	color: rgb(255, 255, 255);
-	font-size: 22px;
-	display: inline-block;
-	width: 250px;
-	text-transform: uppercase;
-	margin: 10px auto;
-}
-
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    font-size: 15px;
-    justify-content: center;
-    color: rgb(255, 255, 255);
-    background-color:rgb(116, 110, 110);
-    text-align: center;
-    height: 50px;
-}
+	background-color:var(--primary-red);
+	text-align: center;
+	height: 50px;
+	text-shadow:0px 5px 10px #c3b2b2;
+} 
