--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-		padding: 0;
-}
-a {
-	text-decoration: none;
-}
-
-html {
-	font: 20px/1.618 Garamond, Cambria, sans-serif;
-}
-a:link {
-	color: rgb(224, 222, 220); 
-	background-color: transparent; 
-	text-decoration: none;
-}
-a:visited {
-	color: rgb(224, 222, 220);
-	background-color: transparent;
-	text-decoration: none;
-}
-a:hover {
-	color:rgb(233, 97, 73);
-	background-color: transparent;
-	text-decoration: underline;
-}
-:root {
-	--primary-color: rgb(116, 110, 110);
-	--secondary-color: rgb(224, 222, 220);
-	--tertiary-color: rgb(233, 114, 93);
-}
-
 .grid1 {
 	display: grid;
 	grid-gap: 1rem;
@@ -39,19 +6,22 @@ a:hover {
 	margin: 4rem auto;
 	padding: 4rem auto;
 	max-width: 1300px;	
-	height: 600px;
-	
+	height: 450px;	
 }
 
 .boxa1 {
 	grid-row: 1 / span 2;
 	border-radius: 15px;
+	-webkit-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	-moz-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
 }
 
 .headshot {
 	border-radius: 15px;
 	height: 100%;
 	width: 100%;
+
 }
 
 .proComp {
@@ -62,26 +32,39 @@ a:hover {
 	font-size: 1rem;
 	text-align: center;
 	padding: 1rem;
+	-webkit-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	-moz-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	text-shadow:0px 5px 10px #b2aaa5;
 }
 
 .wcci {
+	color: rgb(224, 222, 220);
 	grid-column: 2 / span 2;
 	border-radius: 15px;
-	background-color: rgb(233, 114, 93);
+	background-color: rgb(116, 110, 110);
 	text-align: center;
 	font-size: 2rem;
 	padding: 1rem;
+	-webkit-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	-moz-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	text-shadow:0px 5px 10px #c3b2b2;
 }
 
 .education {
+	color: rgb(224, 222, 220);
 	display: block;
 	grid-column: 4 / span 1;
 	border-radius: 15px;
-	background-color: rgb(233, 114, 93);
+	background-color: rgb(116, 110, 110);
 	text-align: center;
 	font-size: 1.2rem;
 	padding: 1rem;
-	
+	-webkit-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	-moz-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	text-shadow:0px 5px 10px #c3b2b2;
 }
 
 .boxa4 {
@@ -94,34 +77,59 @@ a:hover {
 	padding-top: 3rem;
 	background-color: rgb(116, 110, 110);
 	border-radius: 15px;
-}
 
-h2 {
-	text-align: center;
-	font-size: 2rem;
 }
 
 h3 {
-	display: inline-block;
-	font-size: 30px;
 	text-align: center;
-}
-.footerContainer {
-	left: 0;
-	bottom: 0;
-	width: 100%;
 	font-size: 15px;
-	justify-content: center;
-	color: rgb(255, 255, 255);
-	background-color:rgb(116, 110, 110);
-	text-align: center;
-	height: 100px;
+	text-shadow:0px 5px 10px #ae7878;
 }
-button {
-	text-decoration: none;
-	background-color:rgb(116, 110, 110);
-	font-size: 20px;
-	font:  rgb(255, 255, 255);
-	padding: 7px 24px;
-	border-radius: 8px;
+
+.footerContainer {
+	position: fixed;
+  	left: 0;
+  	bottom: 0;
+	width: 100%;
+	height: flex;
+	text-align: center;
+	font-size: 15px;
+	color: rgb(255, 255, 255);
+	background-color: rgb(233, 114, 93);
+	text-align: center;
+	
+} 
+
+.image-github, .image-email, .image-linkedin {
+	height: 30px;
+	width: 30px;
+	
+}
+.button-github, .button-email, .button-linkedin{
+	border-radius: 5px;
+	-webkit-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	-moz-box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+	box-shadow: 10px 10px 52px 10px rgba(17,6,1,1);
+}
+.We {
+	color: rgb(218,35,104);
+}
+.Can {
+	 color: rgb(93,187,70)
+}
+.Code {
+	color: rgb(66,159,215);
+}
+.It {
+	color: rgb(242,103,34);
+}
+.button-wcci {
+	border-radius: 10px;
+	width: 80%;
+	background-color: rgb(224, 222, 220);
+	font: sans-serif;
+	font-size: 2rem;
+	-webkit-box-shadow: 10px 10px 52px 10px rgba(0,0,0,0.75);
+	-moz-box-shadow: 10px 10px 52px 10px rgba(0,0,0,0.75);
+	box-shadow: 10px 10px 52px 10px rgba(0,0,0,0.75);
 }
